feat: add relation company to user
