# src/app/company/presentation/dto/company.dto.ts
@@ -1,5 +1,5 @@
+import { UserEntity } from "../../../user/domain/entities/user.entity"
 import { CompanyEntity } from "../../domain/entities/company.entity";
-
 export class CompanyDTO implements CompanyEntity {
   name: string;
   address: string;
@@ -11,4 +11,5 @@ export class CompanyDTO implements CompanyEntity {
   email: string;
   npwp: string;
   website_url: string;
+  user?: UserEntity
 }
