# src/app/user/domain/usecases/validators/duplicate-username.validator.ts
@@ -1,7 +1,7 @@
+import { UserDataService } from "src/app/user/data/services/user-data.service";
 import { ValidateError } from "tsoa";
 import { FindOneOptions, Not } from "typeorm";
-import { UserEntity } from "../../data/entities/user.entity";
-import { UserDataService } from "../../data/services/user-data.service";
+import { UserEntity } from "../../entities/user.entity";
 
 export class DuplicateUsernameValidator {
   /**
