# src/app/user/presentation/dto/user.dto.ts
@@ -1,4 +1,4 @@
-import { UserEntity, UserRole } from "../../data/entities/user.entity";
+import { UserEntity, UserRole } from "../../domain/entities/user.entity";
 
 export class UserDTO implements UserEntity {
   username: string;
